feat(catalog) more logic than should be in a single commit. Whoops

--- a/src/WebUI/ClientApp/src/app/nav-menu/nav-items/nav-items.component.html
+++ b/src/WebUI/ClientApp/src/app/nav-menu/nav-items/nav-items.component.html
@@ -2,13 +2,10 @@
   <li class="nav-item" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link text-light" [routerLink]="['/']">Home</a>
   </li>
-  <li class="nav-item" [routerLinkActive]="['link-active']">
-    <a class="nav-link text-light" [routerLink]="['/fetch-data']">Fetch data</a>
-  </li>
-  <li class="nav-item" [routerLinkActive]="['link-active']">
+  <!-- <li class="nav-item" [routerLinkActive]="['link-active']">
     <a class="nav-link text-light" [routerLink]="['/token']">JWT</a>
-  </li>
+  </li> -->
   <li class="nav-item" [routerLinkActive]="['link-active']">
-    <a class="nav-link text-light" [routerLink]="['/token']">Catalog</a>
+    <a class="nav-link text-light" [routerLink]="['/catalog']">Catalog</a>
   </li>
 </ul>
