--- a/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -9,7 +9,7 @@
       <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end" [ngClass]="{ show: isExpanded }">
         <nav-items></nav-items>
         <app-login-menu></app-login-menu>
-        <catalog-search></catalog-search>
+        <!-- <catalog-search></catalog-search> -->
       </div>
     </div>
   </nav>
